--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 <data>
     <variable
+        name="callBack"
+        type="com.example.bindingdata.MainActivity" />
+    <variable
         name="studentInfo"
         type="com.example.bindingdata.pojo.StudentModel" />
 </data>
@@ -40,7 +43,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{studentInfo.studentClass}"
-
             android:textColor="#2196F3"
             android:textSize="36sp"
             android:layout_marginVertical="5dp"
@@ -64,6 +66,7 @@
             android:text="go to student list"
             android:textAllCaps="true"
             android:id="@+id/btn1"
+            android:onClick="@{() -> callBack.onGoToStudentsClicked()}"
             />
     </LinearLayout>
 
