--- a/app/src/main/res/layout/user_profile_single_cell.xml
+++ b/app/src/main/res/layout/user_profile_single_cell.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <data>
     <variable
+        name="position"
+        type="int" />
+    <variable
         name="userProfile"
         type="com.example.bindingdata.pojo.CustomerInfoModel" />
 </data>
@@ -35,16 +38,16 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             />
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:id="@+id/userProfieName"
+            android:id="@+id/userNameET"
             android:text="@{userProfile.firstName+` `+userProfile.lastName}"
             android:textSize="18sp"
             android:textColor="@color/design_default_color_primary_dark"
             android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            />
+            android:layout_centerVertical="true"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
